texi2html/test/invalid/bad_documentencoding.texi
\input texinfo @c -*-texinfo-*-
@setfilename bad_documentencoding.info

@node Top
@top test wrong @@documentencoding

@c this one is valid
@documentencoding us-ascii@asis{}

@documentencoding latin1@asis{a}
@documentencoding YS-ASCII
@@documentencoding @documentencoding bad encoding name
@documentencoding
@documentencoding 1
@documentencoding %
@documentencoding @@
@documentencoding AAA@TeX{}
@documentencoding BBB@'e
@set badvalue bad
@documentencoding @value{badvalue}
@macro badmacro
badm
@end macro
@documentencoding @badmacro{}
@documentencoding @strong{

@bye
